[en] Bug fix: on IE6 when chinese characteres were typed, the screen goes blank. The workeround is to force use of serif (or monospace) font family for the chat area (sans-serif will not work). [fr] Bug fix : les caractères chinois provoquaient l'effacement des messages du chat sous IE6. L'astuce consiste à forcer l'utilisation de la famille de police serif (ou monospace) pour la zone de chat (la famille sans-serif était la cause du problème).
git-svn-id: https://phpfreechat.svn.sourceforge.net/svnroot/phpfreechat/trunk@708 2772adf2-ac07-0410-9d30-e29d8120292e

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -33,6 +33,7 @@ div#pfc_channels_content {
   background-color: #FFF;
   margin-top: 5px;
   height: 300px;
+  font-family: serif; /* needed by IE6 in order to display correctly chinese characteres */
 }
 div.pfc_content {
 }
